tooling/nargo_cli/tests/snapshots/execution_success/regression_8174/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v13: [[u8; 3]; 2], v14: u1):
    (no terminator instruction)
}
[regression_8174] Circuit output: [["LNV", "ZIH"]]
